2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>

	Add compilation option to check gradient automatically.
	* src/roboptim-core-cfsqp-plugin.cc: Add compilation option
	to check automatically the gradient.
	* tests/shared-tests: Update sub-module.

2009-07-02  Thomas Moulard  <thomas.moulard@gmail.com>

	Update bootstrap to handle submodules.
	* bootstrap: Handle submodules and check git version.

2009-07-01  Thomas Moulard  <thomas.moulard@gmail.com>

	Use to factorize build-aux, tests and documentation generation.
	* .gitmodules: New.
	* build-aux/autotest.at: Remove.
	* build-aux/autotest.mk: Remove.
	* build-aux/boost.m4: Remove.
	* build-aux/bootstrap: Remove.
	* build-aux/config.guess: Remove.
	* build-aux/config.sub: Remove.
	* build-aux/deb.mk: Remove.
	* build-aux/depcomp: Remove.
	* build-aux/doxygen.m4: Remove.
	* build-aux/ebuild.mk: Remove.
	* build-aux/init.mk: Remove.
	* build-aux/install-sh: Remove.
	* build-aux/libtool.m4: Remove.
	* build-aux/ltmain.sh: Remove.
	* build-aux/ltoptions.m4: Remove.
	* build-aux/ltsugar.m4: Remove.
	* build-aux/ltversion.m4: Remove.
	* build-aux/lt~obsolete.m4: Remove.
	* build-aux/missing: Remove.
	* build-aux/move-if-change: Remove.
	* build-aux/pkg-config.mk: Remove.
	* build-aux/pkg-config.pc.in: Remove.
	* build-aux/roboptim-core.m4: Remove.
	* build-aux/rpm.mk: Remove.
	* build-aux/warning.m4: Remove.
	* build-aux: New.
	* doc/Doxyfile.in: Remove.
	* doc/Makefile.am: Remove.
	* doc/doxygen.css: Remove.
	* doc/footer.html: Remove.
	* doc/header.html: Remove.
	* doc/package.css: Remove.
	* doc/sf-upload.sh.in: Remove.
	* doc/tabs.css: Remove.
	* doc: New.
	* tests/Makefile.am: Add shared-tests to include paths
	and search hs071.hh in shared-tests.
	* tests/hs071.hh: Remove.
	* tests/shared-tests: New.

2009-06-26  Thomas Moulard  <thomas.moulard@gmail.com>

	Add title to functions.
	* tests/hs071.hh,
	* tests/optimization-problem-1.cc: Add title to functions.
	* tests/optimization-problem-1.stdout,