@@ -1,5 +1,11 @@
 2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Implement copy constructor.
+	* include/roboptim/core/plugin/cfsqp.hh,
+	* src/roboptim-core-cfsqp-plugin.cc: Add copy constructor.
+
+2009-07-24  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Add compilation option to check gradient automatically.
 	* src/roboptim-core-cfsqp-plugin.cc: Add compilation option
 	to check automatically the gradient.
